      redirects the request. (BR 262902)
    * Fixed issue when breadcrumbs stayed not updated after service insert/remove.
      (BR 262780)
    * Fixed issue with TagDialog that make metadata fields stay editable if multiple
      streams opened. (BR 177400)
    * Fixed missing equals-sign ('=') in filter string of bookmarks. (BR 245759)


VERSION 2.4.0
  CHANGES:
    * New Splash Screen by Tomasz Dudzik <madsheytan@gmail.com>.
    * The "Playdar Collection" feature has been disabled until some technical 
      issues are resolved.
    * Fixed some broken radio stream URLs.

  BUGFIXES:
    * Fix crash on copying tracks between collection. (BR 261364)
    * Fix fetching of script data. BBC, Free Music Charts and others should work again.
      (BR 261839)
    * Actually show the Splash Screen by default, as it was meant to work.
    * Leave all pending files in case of error/conflict during tracks moving. (BR 257739)
    * Fix crash when moving tracks between collections. (BR 253033)
    * Fixed issue with UMS Collection that made amarok to delete original track
      instead of newly copied one. (BR 238915)
    * Fixed issue with Audio CDs that do not provide CDDB information. Patch by
      Andriy Gapon <avg@icyb.net.ua>. (BR 257818)
    * Fixed issue with the Organize Files Dialog that prevented presets from being
      loaded when in advanced mode. Patch by Philipp Schmidt <philschmidt@gmx.net>.
      (BR 255325)


VERSION 2.4-Beta 1
  FEATURES:
    * New UPnP Collection detects and plays media on UPnP devices on the network.
    * New transcoding feature which converts one or more tracks with a chosen encoder
      when copying to the local collection.
    * Added option to use Wikipedia Mobile.
    * Added settings for writing statistics and album covers back to the file.
    * Leave focus in playlist search widget when using up/down to scroll through
      filtered results. Thanks to Thomas Karpiniec for the patch!