@@ -99,11 +99,7 @@ namespace Amarok
 
         EngineController *engine = The::engineController();
 
-        connect( engine, SIGNAL( stopped( qint64, qint64 ) ),
-                 this, SLOT( updatePlaybackStatusProperty() ) );
-        connect( engine, SIGNAL( paused() ),
-                 this, SLOT( updatePlaybackStatusProperty() ) );
-        connect( engine, SIGNAL( trackPlaying( Meta::TrackPtr ) ),
+        connect( engine, SIGNAL( playbackStateChanged() ),
                  this, SLOT( updatePlaybackStatusProperty() ) );
 
         connect( engine, SIGNAL( trackChanged( Meta::TrackPtr ) ),
